--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,14 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700" rel="stylesheet">
+
 </head>
 <body>
-  <app-root></app-root>
+  <div class="page">
+    <app-root></app-root>
+    <button is="web-button-native">is='element' Button! (see 2.)</button>
+  </div>
+
 </body>
 </html>
